# Lab_5_Programming

./: CMakeLists.txt  Firsttask.cpp  Firsttask.h  Multiply.cpp  Multiply.h  Secondtask.cpp  Secondtask.h  Sum.cpp  Sum.h  Thirdtask.cpp  Thirdtask.h  main.cpp
Task1/: CMakeLists.txt  Delete_zeros.cpp  Delete_zeros.h  main.cpp
